--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,32 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css');
 
+/* Importando css do navbar */
+@import url(./style/nav__bar.css);
+
+/* Importando apresentação main */
+@import url(./style/main__apresentacao.css);
+
+/* Importando css geracoes */
+@import url(./style/geracoes.css);
+
+/* Imporando css footer */
+@import url(./style/footer.css);
+
 @font-face {
     font-family: 'GBA';
     src: url('./assets/Pokemon_Classic_Regular/Pokemon_Classic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+}
+
+* {
+    font-family: 'GBA', sans-serif;
+}
+
+:root {
+    --white: white;
+    --black: black;
+    --red: #BB1D11;
+    --yellow: #FDD02D;
+    --blue-link: #0000FF;
 }
