--- a/style/footer.css
+++ b/style/footer.css
@@ -20,6 +20,7 @@ footer img {
 
 .footer__navegation li a {
     text-decoration: none;
+    color: var(--blue-logo);
 }
 
 .footer__navegation li a:hover {
