--- a/style/nav__bar.css
+++ b/style/nav__bar.css
@@ -21,3 +21,25 @@
     flex-direction: column;
     gap: 10px;
 }
+
+.navbar {
+    background-color: red !important;
+}
+
+.navbar .nav-link {
+    color: white !important;
+}
+
+.navbar .nav-link.active {
+    color: white !important;
+}
+
+button {
+    color: white;
+}
+
+@media screen and (min-width: 768px) {
+    .container-fluid {
+        justify-content: space-between;
+    }
+}
