--- a/style/sobre.css
+++ b/style/sobre.css
@@ -3,9 +3,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 15px;
-    min-height: 70vh;
+    min-height: 95vh;
 }
 
 .logo__sobre {
