--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css');
 
+/* Importando o reset */
+@import url(./style/reset.css);
+
 /* Importando css do navbar */
 @import url(./style/nav__bar.css);
 
@@ -35,7 +38,7 @@
 :root {
     --white: white;
     --black: black;
-    --red: #BB1D11;
+    --red: #dc3545;
     --yellow: #FDD02D;
     --blue-link: #0000FF;
     --blue-logo: #1f4f90;
