--- a/style/geracoes.css
+++ b/style/geracoes.css
@@ -1,4 +1,5 @@
 .geracoes {
+    font-family: var(--primary-font);
     background-color: var(--black);
     padding-bottom: 5px;
 }
@@ -28,4 +29,22 @@
     /* border-bottom: 2px solid var(--red); */
     width: 90%;
     justify-self: center;
+}
+
+@media screen and (min-width: 769px) {
+    .container__geracoes {
+        width: 100%;
+    }
+
+    .container__geracoes a {
+        padding: 0;
+        margin: 0;
+        border: 1px solid red;
+        width: 200px;
+    }
+
+    .container__geracoes img {
+        border: 1px solid red;
+        width: 200px;
+    }
 }
