--- a/style/main__apresentacao.css
+++ b/style/main__apresentacao.css
@@ -7,3 +7,10 @@
     text-align: center;
     width: 90%;
 }
+
+@media screen and (min-width: 768px) {
+    .apresentacao__text {
+        width: 70%;
+        font-size: 20px;
+    }
+}
