--- a/style/rooms.css
+++ b/style/rooms.css
@@ -1,4 +1,5 @@
 .rooms {
+    font-family: var(--primary-font);
     background-color: var(--black);
     padding-bottom: 10px;
 }
@@ -27,4 +28,14 @@
     /* border-bottom: 2px solid var(--red); */
     width: 90%;
     justify-self: center;
+}
+
+@media screen and (min-width: 768px) {
+    .container__rooms {
+        gap: 15px;
+    }
+
+    .rooms img {
+        width: 200px;
+    }
 }
