--- a/style/sobre.css
+++ b/style/sobre.css
@@ -17,3 +17,10 @@
     width: 90%;
     text-align: center;
 }
+
+@media screen and (min-width: 768px) {
+    .paragrafo__sobre {
+        font-size: 20px;
+        width: 70%;
+    }
+}
