--- a/style/rooms.css
+++ b/style/rooms.css
@@ -33,6 +33,7 @@
 @media screen and (min-width: 768px) {
     .container__rooms {
         gap: 15px;
+        padding-bottom: 5px;
     }
 
     .rooms img {
