--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
+/* Importando bootsrap */
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css');
+
+/* Importando Remixicon */
+@import url(https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css);
 
 /* Importando o reset */
 @import url(./style/reset.css);
@@ -23,6 +27,10 @@
 
 /* Importando css sobre */
 @import url(./style/sobre.css);
+
+/* Importando css páginas de download */
+@import url(./style/page__download.css);
+
 
 @font-face {
     font-family: 'GBA';
