--- a/style/sobre.css
+++ b/style/sobre.css
@@ -1,5 +1,4 @@
 .main__sobre {
-    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,15 +6,18 @@
     align-items: center;
     gap: 15px;
     min-height: 95vh;
+    background-color: var(--black);
 }
 
 .logo__sobre {
+    margin-top: 10px;
     width: 350px;
 }
 
 .paragrafo__sobre {
     width: 90%;
     text-align: center;
+    color: white;
 }
 
 @media screen and (min-width: 768px) {
